test/tests/compiler/11_long_integers/valid/libraries/return_long.plx
pub fn add(a: i32, b: i32) i64 {
    return cast<i64>(a) + cast<i64>(b)
}
