test/tests/compiler/11_long_integers/invalid_parse/missing_cast_parentheses.plx
pub fn main(none) i32 {
    # The type specifier in a cast expression must be in parentheses
    return cast<i64> 0
}
